Modifing hyprland configs

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,10 +6,8 @@ monitor=,preferred,auto,auto
 # eDP-1 is the built in monitor while DP-1 is external
 # Both monitors here are at 1440 and 165Hz
 # DP-1 is on the left and  eDP-1 is on the right
-#monitor=DP-1,2560x1440@165,0x0,1
-#monitor=eDP-1,2560x1440@165,2560x0,1
 monitor=eDP-1,1920x1080@60,0x0,1
-monitor=HDMI-A-1,1366x768@60,1920x0,1
+monitor=HDMI-A-1,1920x1080@74,1920x0,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -17,10 +15,14 @@ monitor=HDMI-A-1,1366x768@60,1920x0,1
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user start opentabletdriver.service 
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme Bibata-Modern-Classic
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = /home/robert/.config/swww/swwwallpaper.sh 
 exec-once = waybar 
+exec-once = waybar -c /home/robert/.config/waybar_hdmi/config.jsonc 
+exec-once = input-remapper-control --command autoload
 #exec = mpDris2
 #exec = swaybg -m fill -i ~/Pictures/wallpapers/wallpapersden.com_colorful-fantasy-castle-ai-art_1920x1080.jpg
 
@@ -35,7 +37,8 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse=0
+    float_switch_override_focus=0
 
     touchpad {
         natural_scroll = yes
@@ -43,6 +46,7 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
+
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -54,7 +58,6 @@ general {
     col.active_border=rgb(cdd6f4)
     # col.active_border = $color4
     # col.inactive_border = rgba(595959aa)
-    col.inactive_border = $color10
 
     layout = dwindle
 }
@@ -63,21 +66,7 @@ misc {
     disable_hyprland_logo = yes
 }
 
-decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
-    blur = yes
-    blur_size = 7
-    blur_passes = 3
-    blur_new_optimizations = on
-    blurls = lockscreen
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-}
 
 animations {
     enabled = yes
@@ -115,6 +104,29 @@ device:epic mouse V1 {
     sensitivity = -0.5
 }
 
+device:wacom-intuos-s-pen {
+  transform = 0
+  output = HDMI-A-1
+}
+
+decoration {
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+
+    rounding = 10
+    drop_shadow = yes
+    
+    shadow_range = 4
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
+    blur {
+      enabled = true
+      size = 7
+      passes = 3 
+    }
+}
+
+
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
@@ -125,7 +137,10 @@ device:epic mouse V1 {
 # windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 # windowrulev2 = opacity 0.9 0.9,class:^(chromium)$
 # windowrulev2 = opacity 0.9 0.9,class:^(Code)$
-
+windowrulev2 = stayfocused, title:^()$,class:^(steam)$
+windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
+windowrule = unset, title:^()$, class:*(warp)*
+windowrulev2 = tile, class:dev.warp.Warp
 
 # Workspace 
 workspace = eDP-1,1
@@ -138,18 +153,19 @@ workspace = HDMI-A-1,7
 workspace = HDMI-A-1,8
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
+
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, wezterm  #open the terminal
+bind = $mainMod, RETURN, exec, warp-terminal  #open the terminal
 bind = $mainMod, W, killactive, # close the active window
 bind = $mainMod SHIFT, L, exec, swaylock # Lock the screen
 bind = $mainMod, Q, exec,wlogout -b 2 -c 0 -r 0 -L 530 -R 530 -T 300 -B 300 --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, Q, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = $mainMod, V, togglefloating, # Allow a window to float
-bind = $mainMod, M, exec, wofi # Show the graphicall app launcher
+bind = $mainMod, m, exec, rofi -show drun # Show the graphicall app launcher
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, 1 # monocle layout
 bind = $mainMod SHIFT, F, fullscreen, 0 # monocle layout
 bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
@@ -165,9 +181,18 @@ bind = ,233, exec, brightnessctl set 10%+ # Screen brightness up FN+F8
 bind = ,237, exec, brightnessctl -d asus::kbd_backlight set 33%- # Keyboard brightness down FN+F2
 bind = ,238, exec, brightnessctl -d asus::kbd_backlight set 33%+ # Keyboard brightnes up FN+F3
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, L, movefocus, l
-bind = $mainMod, H, movefocus, r
+# X86 keys
+bind = ,171, exec, playerctl -p spotify next
+bind = ,172, exec, playerctl -p spotify play-pause
+bind = ,173, exec, playerctl -p spotify previous
+bind = ,174, exec, playerctl -p spotify stop
+
+# x86 tools keys
+bind = ,179, exec, flatpak run com.spotify.Client
+
+# Move focus with $mainMod + arrow keys
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
@@ -177,19 +202,25 @@ bind=$mainMod SHIFT, right,resizeactive,40 0
 bind=$mainMod SHIFT, up,resizeactive,0 -40
 bind=$mainMod SHIFT, down,resizeactive,0 40
  
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+# Switch workspaces with $mainMod + [0-9]
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind = $mainMod,1, exec, ~/.local/bin/hyprland_moveinmonitor 1
+bind = $mainMod,2, exec, ~/.local/bin/hyprland_moveinmonitor 2
+bind = $mainMod,3, exec, ~/.local/bin/hyprland_moveinmonitor 3
+bind = $mainMod,4, exec, ~/.local/bin/hyprland_moveinmonitor 4
+
+# bind = $mainMod, 1, workspace, 1
+# bind = $mainMod, 2, workspace, 2
+# bind = $mainMod, 3, workspace, 3
+# bind = $mainMod, 4, workspace, 4
+# bind = $mainMod, 5, workspace, 5
+# bind = $mainMod, 6, workspace, 6
+# bind = $mainMod, 7, workspace, 7
+# bind = $mainMod, 8, workspace, 8
+# bind = $mainMod, 9, workspace, 9
+# bind = $mainMod, 0, workspace, 10
+
+# Move active window to a workspace with $mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -201,15 +232,15 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Move through workspaces with mainMod + scroll
+# Move through workspaces with $mainMod + scroll
 bind = $mainMod CONTROL, right, workspace, +1
 bind = $mainMod CONTROL, left, workspace, -1
 
-# Change through workspaces with mainMod + scroll
+# Change through workspaces with $mainMod + scroll
 bind = $mainMod SHIFT, right, movetoworkspace, +1
 bind = $mainMod SHIFT, left, movetoworkspace, -1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+# Move/resize windows with $mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
