--- a/config/hypr/_hyprland.conf
+++ b/config/hypr/_hyprland.conf
@@ -10,20 +10,19 @@ monitor=eDP-1,1920x1080@60,0x0,1
 monitor=HDMI-A-1,1920x1080@60,1920x0,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
+
 # Execute your favorite apps at launch
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user start opentabletdriver.service 
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme Bibata-Modern-Ice
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 exec-once = /home/robert/.config/swww/swwwallpaper.sh 
-exec-once = /home/robert/.local/bin/hypr_pen_utils_server
-exec-once = ags 
-# exec-once = PATH=/home/robert/.cargo/bin:/usr/local/sbin:/usr/local/bin:/usr/bin:/var/lib/flatpak/exports/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:/usr/lib/rustup/bin waybar 
-# exec-once = waybar -c /home/robert/.config/waybar_hdmi/config.jsonc 
-exec-once = /home/robert/.local/bin/basic_binds_tablet_pad
-# exec-once = input-remapper-control --command autoload
+exec-once = PATH=/home/robert/.cargo/bin:/usr/local/sbin:/usr/local/bin:/usr/bin:/var/lib/flatpak/exports/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:/usr/lib/rustup/bin waybar 
+exec-once = waybar -c /home/robert/.config/waybar_hdmi/config.jsonc 
+exec-once = input-remapper-control --command autoload
 #exec = mpDris2
 #exec = swaybg -m fill -i ~/Pictures/wallpapers/wallpapersden.com_colorful-fantasy-castle-ai-art_1920x1080.jpg
 
@@ -50,13 +49,6 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
-
-device {
-    name = ydotoold-virtual-device
-    kb_layout = us
-    kb_variant =
-    kb_options =
 }
 
 
@@ -114,6 +106,7 @@ gestures {
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 
 # $binded_pen_monitor=HDMI-A-1
+#
 # device {
 #   name = wacom-intuos-s-pen
 #   transform = 0
@@ -153,12 +146,9 @@ windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
 windowrule = unset, title:^()$, class:*(warp)*
 windowrulev2 = tile, class:dev.warp.Warp
 
-windowrulev2 = fullscreen, class:(Asseto*)
-
-
 # workspace
 # IMPORTANT: Mantein this struct
-workspace = 1,monitor: eDP-1, name: "1" 
+workspace = 1,monitor: eDP-1, name: "1"
 workspace = 2,monitor: eDP-1, name: "2"
 workspace = 3,monitor: eDP-1, name: "3"
 workspace = 4,monitor: eDP-1, name: "4"
@@ -172,30 +162,21 @@ workspace = 8,monitor: HDMI-A-1, name: "8"
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, alacritty -e tmux # 2>> /home/robert/log_alacritty  #open the terminal
+bind = $mainMod, RETURN, exec, warp-terminal  #open the terminal
 bind = $mainMod, W, killactive, # close the active window
 bind = $mainMod SHIFT, L, exec, swaylock # Lock the screen
 bind = $mainMod, Q, exec,wlogout -b 2 -c 0 -r 0 -L 530 -R 530 -T 300 -B 300 --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, Q, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = $mainMod, V, togglefloating, # Allow a window to float
 # bind = $mainMod, m, exec, rofi -show drun # Show the graphicall app launcher
-bindr = $mainMod, m, exec, pkill wofi || wofi --show drun # Show or kills the graphicall app launcher
-bind = $mainMod, t, pseudo, # dwindle
+bind = $mainMod, m, exec, wofi --show drun # Show the graphicall app launcher
+bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
-bind = $mainMod, F, fullscreen, 0  # monocle layout
-bind = $mainMod SHIFT, F, fullscreen, 1 # monocle layout
-bind = $mainMod, S, submap, screenshot 
-# bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
-# bind = $mainMod SHIFT, S, exec, grim -g "0,0 1920x1080" - | swappy -f - # take a screenshot in principal monitor
-# bind = $mainMod ALT, S, exec, grim -g "1920,0 1920x1080" - | swappy -f - # take a screenshot in second monitor
-
-submap=screenshot
-bind = , S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
-bind = , D, exec, grim -g "0,0 1920x1080" - | swappy -f - # take a screenshot in principal monitor
-bind = , M, exec, grim -g "1920,0 1920x1080" - | swappy -f - # take a screenshot in second monitor
-bind = , A, exec, grim -g "0,0 3840x1080" - | swappy -f - # take a screenshot in second monitor
-bind=,catchall,submap,reset
-submap=reset
+bind = $mainMod, F, fullscreen, 1 # monocle layout
+bind = $mainMod SHIFT, F, fullscreen, 0 # monocle layout
+bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
+bind = $mainMod SHIFT, S, exec, grim -g "0,0 1920x1080" - | swappy -f - # take a screenshot in principal monitor
+bind = $mainMod ALT, S, exec, grim -g "1920,0 1920x1080" - | swappy -f - # take a screenshot in second monitor
 
 # ROG G15 Strix (2021) Specific binds
 # bind = ,121, exec, pamixer -t # Speaker Mute FN+F1
@@ -203,8 +184,8 @@ submap=reset
 # bind = ,123, exec, pamixer -i 5 # Volume Higher key
 
 # bind = ,121, exec, amixer -t #
-binde = ,122, exec, amixer sset Master $(( $(amixer sget Master | grep -o '[0-9]*%' | sed 's/%//') - 5 ))% 
-binde = ,123, exec, amixer sset Master $(( $(amixer sget Master | grep -o '[0-9]*%' | sed 's/%//') + 5 ))%  
+bind = ,122, exec, amixer sset Master $(( $(amixer sget Master | grep -o '[0-9]*%' | sed 's/%//') - 5 ))% 
+bind = ,123, exec, amixer sset Master $(( $(amixer sget Master | grep -o '[0-9]*%' | sed 's/%//') + 5 ))%  
 
 
 bind = ,256, exec, pamixer --default-source -t # Mic mute key
@@ -253,28 +234,20 @@ bind = $mainMod,4, exec, ~/.local/bin/hyprland_moveinmonitor 4
 # bind = $mainMod, 0, workspace, 10
 
 # Switch Wacom Pen
-
-bind = $mainMod ,P ,submap, pen
-submap=pen
-bind = , M,   exec, ~/.local/bin/hypr_pen_utils_client mode manual # change to manual mode
-bind = , T,   exec, ~/.local/bin/hypr_pen_utils_client mode track # change to track mode
-bind = , TAB, exec, ~/.local/bin/hypr_pen_utils_client change # change of monitor
-bind=,catchall,submap,reset
-submap=reset
-
+bind = $mainMod SHIFT,P ,exec, ~/.local/bin/hyprland_switchpen_into_monitors
 bind = ,mouse:256 ,exec, ~/.local/bin/hyprland_switchpen_into_monitors
 
 # Move active window to a workspace with $mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, name:1
-bind = $mainMod SHIFT, 2, movetoworkspace, name:2
-bind = $mainMod SHIFT, 3, movetoworkspace, name:3
-bind = $mainMod SHIFT, 4, movetoworkspace, name:4
-bind = $mainMod SHIFT, 5, movetoworkspace, name:5
-bind = $mainMod SHIFT, 6, movetoworkspace, name:6
-bind = $mainMod SHIFT, 7, movetoworkspace, name:7
-bind = $mainMod SHIFT, 8, movetoworkspace, name:8
-# bind = $mainMod SHIFT, 9, movetoworkspace, 9
-# bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Move through workspaces with $mainMod + scroll
 bind = $mainMod CONTROL, right, workspace, +1
